Revert frontend to 0a45369

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -170,13 +170,13 @@
             { question: 'En rapide, comment ça va ?', answer: q1 },
             { question: 'Possibilité d\'ajouter un peu plus de détails à la question précédente :', answer: q2 },
             { question: 'Le pulse check mensuel... montre une photo de toi ce mois-ci', answer: q3 },
-            { question: 'Est-ce que tu veux partager un truc cool que t\'as fait ce mois-ci ?', answer: q4 },
-            { question: 'C\'est quoi la reaction pic que tu utilises le plus en ce moment ?', answer: q5 },
-            { question: 'Est-ce que t\'as eu une conversation intéressante avec quelqu\'un récemment ? De quoi est-ce que ça parlait ?', answer: q6 },
-            { question: 'Ta découverte culturelle du moment ? (film, série, resto, bar, zoo, belle femme, vêtement... une catégorie assez libre finalement)', answer: q7 },
-            { question: 'Est-ce que t\'as une habitude ou une nouvelle routine que t\'essaies d\'implémenter ces temps-ci ? Si oui... est-ce que ça fonctionne... si non... est-ce que y\'a un truc que tu voudrais implémenter ?', answer: q8 },
-            { question: 'Appel à un AMI : Est-ce que t\'as un problème particulier pour lequel tu aurais besoin d\'opinions tierces ? (exemple : poll pour ta prochaine teinture, recommandations de matelas, etc.)', answer: q9 },
-            { question: 'Pour terminer : une photo de toi qui touche de l\'herbe ou un arbre', answer: q10 }
+            { question: "Est-ce que tu veux partager un truc cool que t'as fait ce mois-ci ?", answer: q4 },
+            { question: "C'est quoi la reaction pic que tu utilises le plus en ce moment ?", answer: q5 },
+            { question: "Est-ce que t'as eu une conversation intéressante avec quelqu'un récemment ? De quoi est-ce que ça parlait ?", answer: q6 },
+            { question: "Ta découverte culturelle du moment ? (film, série, resto, bar, zoo, belle femme, vêtement... une catégorie assez libre finalement)", answer: q7 },
+            { question: "Est-ce que t'as une habitude ou une nouvelle routine que t'essaies d'implémenter ces temps-ci ? Si oui... est-ce que ça fonctionne... si non... est-ce que y'a un truc que tu voudrais implémenter ?", answer: q8 },
+            { question: "Appel à un AMI : Est-ce que t'as un problème particulier pour lequel tu aurais besoin d'opinions tierces ? (exemple : poll pour ta prochaine teinture, recommandations de matelas, etc.)", answer: q9 },
+            { question: "Pour terminer : une photo de toi qui touche de l'herbe ou un arbre", answer: q10 }
           ]
         };
 
