--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -134,73 +134,55 @@
       const feedback = document.getElementById('feedback');
       feedback.textContent = ''; // efface les anciens messages
 
-      // Validation de tous les champs requis
-      const name = document.getElementById('name').value.trim();
-      if (!name) {
-        feedback.textContent = '❌ Veuillez renseigner votre nom';
-        return;
+      // Validation helper function
+      function validateField(id, errorMessage, isFile = false) {
+        const element = document.getElementById(id);
+        const value = isFile ? element.files[0] : element.value.trim();
+        if (!value) {
+          feedback.textContent = `❌ ${errorMessage}`;
+          return false;
+        }
+        return value;
       }
 
+      // Validate radio button
       const q1Radio = document.querySelector('input[name="question1"]:checked');
       if (!q1Radio) {
         feedback.textContent = '❌ Veuillez sélectionner une réponse à la première question';
         return;
       }
+
+      // Validate all fields
+      const name = validateField('name', 'Veuillez renseigner votre nom');
+      if (!name) return;
+
       const q1 = q1Radio.value;
+      const q2 = validateField('question2', 'Veuillez répondre à la question 2');
+      if (!q2) return;
 
-      const q2 = document.getElementById('question2').value.trim();
-      if (!q2) {
-        feedback.textContent = '❌ Veuillez répondre à la question 2';
-        return;
-      }
+      const q3File = validateField('question3', 'Veuillez ajouter une photo pour la question 3', true);
+      if (!q3File) return;
 
-      const q3File = document.getElementById('question3').files[0];
-      if (!q3File) {
-        feedback.textContent = '❌ Veuillez ajouter une photo pour la question 3';
-        return;
-      }
+      const q4 = validateField('question4', 'Veuillez répondre à la question 4');
+      if (!q4) return;
 
-      const q4 = document.getElementById('question4').value.trim();
-      if (!q4) {
-        feedback.textContent = '❌ Veuillez répondre à la question 4';
-        return;
-      }
+      const q5File = validateField('question5', 'Veuillez ajouter une image pour la question 5', true);
+      if (!q5File) return;
 
-      const q5File = document.getElementById('question5').files[0];
-      if (!q5File) {
-        feedback.textContent = '❌ Veuillez ajouter une image pour la question 5';
-        return;
-      }
+      const q6 = validateField('question6', 'Veuillez répondre à la question 6');
+      if (!q6) return;
 
-      const q6 = document.getElementById('question6').value.trim();
-      if (!q6) {
-        feedback.textContent = '❌ Veuillez répondre à la question 6';
-        return;
-      }
+      const q7File = validateField('question7', 'Veuillez ajouter une image pour la question 7', true);
+      if (!q7File) return;
 
-      const q7File = document.getElementById('question7').files[0];
-      if (!q7File) {
-        feedback.textContent = '❌ Veuillez ajouter une image pour la question 7';
-        return;
-      }
+      const q8 = validateField('question8', 'Veuillez répondre à la question 8');
+      if (!q8) return;
 
-      const q8 = document.getElementById('question8').value.trim();
-      if (!q8) {
-        feedback.textContent = '❌ Veuillez répondre à la question 8';
-        return;
-      }
+      const q9 = validateField('question9', 'Veuillez répondre à la question 9');
+      if (!q9) return;
 
-      const q9 = document.getElementById('question9').value.trim();
-      if (!q9) {
-        feedback.textContent = '❌ Veuillez répondre à la question 9';
-        return;
-      }
-
-      const q10File = document.getElementById('question10').files[0];
-      if (!q10File) {
-        feedback.textContent = '❌ Veuillez ajouter une photo pour la question 10';
-        return;
-      }
+      const q10File = validateField('question10', 'Veuillez ajouter une photo pour la question 10', true);
+      if (!q10File) return;
 
       async function uploadFile(id) {
         const inp = document.getElementById(id);
