--- a/frontend/public/auth-choice.html
+++ b/frontend/public/auth-choice.html
@@ -7,8 +7,8 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Bienvenue sur FAF - Form a Friend</title>
-    <link rel="stylesheet" href="/css/shared-base.css" nonce="{{nonce}}">
-    <link rel="stylesheet" href="/css/auth-choice.css" nonce="{{nonce}}">
+    <link rel="stylesheet" href="/css/shared-base.css">
+    <link rel="stylesheet" href="/css/auth-choice.css">
 </head>
 <body>
     <div class="container">
