--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion - FAF</title>
-    <link rel="stylesheet" href="/css/shared-base.css" nonce="{{nonce}}">
-    <link rel="stylesheet" href="/css/login.css" nonce="{{nonce}}">
+    <link rel="stylesheet" href="/css/shared-base.css">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
     <div class="form-container">
