🔧 FIX: Resolve infinite login page refresh loop
**Problem:**
- login.html had auto-redirect logic that checked /api/auth/me on page load
- If user seemed authenticated, redirected to /admin or /dashboard
- But these routes use ensureAdmin middleware (legacy session system)
- Created infinite loop: /login → /admin → /login → /admin → ...

**Solution:**
- Remove automatic authentication check on page load
- Keep proper post-login redirections after successful form submission
- Add comprehensive test suite to prevent regression

**Changes:**
- Remove checkAuthStatus() and DOMContentLoaded listener in login.html
- Add explanatory comment about infinite loop prevention
- Create login-infinite-loop.test.js with 5 tests validating the fix
- Ensure form submission and post-login redirects still work correctly

**Testing:**
✅ login page loads without auto-redirects
✅ form submission logic preserved
✅ post-login redirections work correctly
✅ registered parameter handling works
✅ no more infinite refresh loop

Fixes major UX issue where login page was unusable due to constant refreshing.

--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -150,33 +150,8 @@
             }
         }
         
-        // Fonction pour vérifier l'authentification
-        async function checkAuthStatus() {
-            try {
-                const response = await fetch('/api/auth/me', {
-                    credentials: 'include'
-                });
-                if (response.ok) {
-                    return await response.json();
-                }
-            } catch (error) {
-                console.error('Erreur lors de la vérification auth:', error);
-            }
-            return null;
-        }
-
-        // Vérifier si l'utilisateur est déjà connecté
-        window.addEventListener('DOMContentLoaded', async function() {
-            const auth = await checkAuthStatus();
-            if (auth && auth.user) {
-                const role = auth.user.role;
-                if (role === 'admin') {
-                    window.location.href = '/admin';
-                } else {
-                    window.location.href = '/dashboard';
-                }
-            }
-        });
+        // Note: Auto-redirect removed to prevent infinite loop
+        // The login page should always be accessible for explicit user authentication
     </script>
 </body>
 </html>
