🔧 UX: Afficher le nom de l'utilisateur au lieu de 'Vous' dans view.html
- Remplace 'Vous:' par le nom réel de l'utilisateur
- Améliore la clarté de l'affichage 1vs1
- Plus personnel et informatif

--- a/frontend/public/view.html
+++ b/frontend/public/view.html
@@ -179,10 +179,10 @@
             questionElement.style.color = '#333';
             questionElement.style.marginBottom = '10px';
 
-            // Votre réponse
+            // Réponse de l'utilisateur
             const yourAnswer = document.createElement('p');
             const yourLabel = document.createElement('strong');
-            yourLabel.textContent = 'Vous: ';
+            yourLabel.textContent = `${user.name}: `;
             yourAnswer.appendChild(yourLabel);
             yourAnswer.appendChild(createAnswerContent(answer));
             yourAnswer.style.marginBottom = '10px';
