🎨 UX: Améliorer l'affichage des noms dans la vue comparative
✨ AMÉLIORATIONS:
- Titre de view.html: '[Nom] vs riri - Mois' au lieu de 'Vos réponses - Mois'
- Message de confirmation: 'Votre lien privé pour voir la comparaison [Nom] vs riri'
- Backend: Envoie userName et adminName dans la réponse
- Plus informatif et personnel pour l'utilisateur

🎯 AVANT: 'Vos réponses - février 2025'
🎯 APRÈS: 'Marie vs riri - février 2025'

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -338,7 +338,9 @@
         
         if (resJ.link) {
           const br = document.createElement('br');
-          const linkText = document.createTextNode('Votre lien privé : ');
+          const userName = resJ.userName || 'Vous';
+          const adminName = resJ.adminName || 'Admin';
+          const linkText = document.createTextNode(`Votre lien privé pour voir la comparaison ${userName} vs ${adminName} : `);
           const linkEl = document.createElement('a');
           linkEl.href = resJ.link;
           linkEl.target = '_blank';
