🎨 STYLE: Noms en noir au lieu de bleu dans dashboard

--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -213,7 +213,7 @@
           item.className = "flex items-start gap-3 border-b border-gray-100 pb-3";
 
           const nameSpan = document.createElement('span');
-          nameSpan.className = "font-semibold text-blue-600 min-w-[120px]";
+          nameSpan.className = "font-semibold text-black min-w-[120px]";
           nameSpan.textContent = a.name + ':';
 
           const answerSpan = document.createElement('span');
